# gnafr

./: .gitignore  Cargo.toml  db.sql  flake.nix
gnafr-api/: .env  Cargo.toml
gnafr-api/.sqlx/: query-9b02be50a4e56bfa06c158f40f059f20a578d02753480f43be5ddbff99baf121.json  query-b3f327667f498b2024293269d893c79f58921ce013ca6c3e70dbc670cac9246a.json
gnafr-api/src/: main.rs
gnafr-db/: Cargo.toml
gnafr-db/src/: main.rs
src/: main.rs
