[package]
name = "gnafr-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "macros"] }
